data fetched from BigQuery

--- a/Stock_Prediction.ipynb
+++ b/Stock_Prediction.ipynb
@@ -6,7 +6,7 @@
       "name": "Stock_Prediction.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP4NiSW8nL2NY1unpVu4ShO",
+      "authorship_tag": "ABX9TyNIfCV3PveC+g4MaWCGCa1s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,13 +36,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1U9xSkQpge_d",
-        "outputId": "9c276f43-192d-4d70-e3ac-3663af206463"
+        "outputId": "aaa47ce5-de86-4713-f162-2ccf42c0d440"
       },
       "source": [
-        "!pip install yfinance\n",
         "!pip install pyspark\n",
+        "!pip install elephas\n",
         "\n",
-        "import yfinance as yf\n",
         "import pandas as pd\n",
         "from matplotlib.pyplot import *\n",
         "\n",
@@ -54,13 +53,19 @@
         "from pyspark.sql.window import Window\n",
         "from pyspark.sql.types import DoubleType\n",
         "\n",
-        "from keras.models import Sequential\n",
-        "from keras.layers.core import Dense, Dropout, Activation\n",
-        "from keras import optimizers, regularizers\n",
-        "from tensorflow.keras.optimizers import SGD\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Dropout, Activation, LSTM\n",
+        "from tensorflow.keras import optimizers, regularizers\n",
+        "from tensorflow.keras.optimizers import SGD, Adam\n",
+        "from tensorflow.keras.callbacks import EarlyStopping, Callback\n",
+        "\n",
+        "from elephas.ml_model import ElephasEstimator\n",
+        "from google.cloud import bigquery\n",
         "\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = '/content/drive/My Drive/stock-data-analysis-cse560-b3fc65360aa2.json'"
       ],
       "execution_count": null,
       "outputs": [
@@ -68,47 +73,22 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting yfinance\n",
-            "  Downloading yfinance-0.1.63.tar.gz (26 kB)\n",
+            "Requirement already satisfied: yfinance in /usr/local/lib/python3.7/dist-packages (0.1.63)\n",
+            "Requirement already satisfied: lxml>=4.5.1 in /usr/local/lib/python3.7/dist-packages (from yfinance) (4.6.3)\n",
+            "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.7/dist-packages (from yfinance) (0.0.9)\n",
+            "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.7/dist-packages (from yfinance) (2.23.0)\n",
             "Requirement already satisfied: pandas>=0.24 in /usr/local/lib/python3.7/dist-packages (from yfinance) (1.1.5)\n",
             "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.7/dist-packages (from yfinance) (1.19.5)\n",
-            "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.7/dist-packages (from yfinance) (2.23.0)\n",
-            "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.7/dist-packages (from yfinance) (0.0.9)\n",
-            "Collecting lxml>=4.5.1\n",
-            "  Downloading lxml-4.6.3-cp37-cp37m-manylinux2014_x86_64.whl (6.3 MB)\n",
-            "\u001b[K     |████████████████████████████████| 6.3 MB 4.9 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24->yfinance) (2018.9)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24->yfinance) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24->yfinance) (2018.9)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas>=0.24->yfinance) (1.15.0)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.20->yfinance) (2.10)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.20->yfinance) (3.0.4)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests>=2.20->yfinance) (2021.5.30)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests>=2.20->yfinance) (1.24.3)\n",
-            "Building wheels for collected packages: yfinance\n",
-            "  Building wheel for yfinance (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for yfinance: filename=yfinance-0.1.63-py2.py3-none-any.whl size=23918 sha256=812440199f8ad0463e05f06fa406a521c755d2b6418beb2c2d1ef25a80483264\n",
-            "  Stored in directory: /root/.cache/pip/wheels/fe/87/8b/7ec24486e001d3926537f5f7801f57a74d181be25b11157983\n",
-            "Successfully built yfinance\n",
-            "Installing collected packages: lxml, yfinance\n",
-            "  Attempting uninstall: lxml\n",
-            "    Found existing installation: lxml 4.2.6\n",
-            "    Uninstalling lxml-4.2.6:\n",
-            "      Successfully uninstalled lxml-4.2.6\n",
-            "Successfully installed lxml-4.6.3 yfinance-0.1.63\n",
-            "Collecting pyspark\n",
-            "  Downloading pyspark-3.1.2.tar.gz (212.4 MB)\n",
-            "\u001b[K     |████████████████████████████████| 212.4 MB 66 kB/s \n",
-            "\u001b[?25hCollecting py4j==0.10.9\n",
-            "  Downloading py4j-0.10.9-py2.py3-none-any.whl (198 kB)\n",
-            "\u001b[K     |████████████████████████████████| 198 kB 40.5 MB/s \n",
-            "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
-            "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.1.2-py2.py3-none-any.whl size=212880768 sha256=5efc05bf8bf49e281c257a2d1a920b872679576c2c7f4c4d22631c6ac1ec9c55\n",
-            "  Stored in directory: /root/.cache/pip/wheels/a5/0a/c1/9561f6fecb759579a7d863dcd846daaa95f598744e71b02c77\n",
-            "Successfully built pyspark\n",
-            "Installing collected packages: py4j, pyspark\n",
-            "Successfully installed py4j-0.10.9 pyspark-3.1.2\n",
-            "Mounted at /content/drive\n"
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.20->yfinance) (2.10)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.20->yfinance) (3.0.4)\n",
+            "Requirement already satisfied: pyspark in /usr/local/lib/python3.7/dist-packages (3.1.2)\n",
+            "Requirement already satisfied: py4j==0.10.9 in /usr/local/lib/python3.7/dist-packages (from pyspark) (0.10.9)\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -120,7 +100,6 @@
       },
       "source": [
         "# Spark Session\n",
-        "\n",
         "conf = SparkConf().setAppName('Stock Price Prediction').setMaster('local[2]')\n",
         "sc = SparkContext(conf=conf)\n",
         "sql_context = SQLContext(sc)"
@@ -131,31 +110,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sBlDYl_LjHnR"
+        "id": "pM5WgSuFUben"
       },
       "source": [
-        "# Fetch Stock data from Yahoo Finance\n",
+        "# Connect to BigQuery\n",
+        "bqclient = bigquery.Client()\n",
         "\n",
-        "def dump_stock_data(name=None):\n",
-        "  msft = yf.Ticker(name)\n",
+        "def fetch_from_bquery(name=None):\n",
+        "  # Download query results.\n",
+        "  query_string = ''' select * from stock-data-analysis-cse560.StockInfoDatabase.stock_history where Symbol={};'''.format(name)\n",
         "\n",
-        "  df_hist = msft.history(period='max')\n",
-        "  df_hist['date_'] = df_hist.index\n",
-        "  df_hist.index = range(len(df_hist))\n",
+        "  df_hist = (\n",
+        "      bqclient.query(query_string)\n",
+        "      .result()\n",
+        "      .to_dataframe(\n",
+        "          # Optionally, explicitly request to use the BigQuery Storage API. As of\n",
+        "          # google-cloud-bigquery version 1.26.0 and above, the BigQuery Storage\n",
+        "          # API is used by default.\n",
+        "          create_bqstorage_client=True,\n",
+        "      )\n",
+        "  )\n",
         "\n",
         "  df_hist.to_csv('df_stock_hist.csv', index=False)\n",
         "  !mv df_stock_hist.csv '/content/drive/My Drive/'"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oePEbLtyuVtW"
-      },
-      "source": [
-        "dump_stock_data(name='GOOGL')"
       ],
       "execution_count": null,
       "outputs": []
@@ -167,11 +144,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e1d5a987-d3a2-4ff1-b73d-18f32bf49eb8"
+        "outputId": "247d3ca0-ecd1-4268-fe74-5301ff41dca0"
       },
       "source": [
         "# Load Spark df\n",
-        "\n",
+        "fetch_from_bquery(name='GOOGL')\n",
         "df_hist = sql_context.read.csv('/content/drive/My Drive/df_stock_hist.csv', header=True, inferSchema=True)[['date_', 'Open']]\n",
         "df_hist.orderBy('date_', ascending=True, inplace=True)"
       ],
@@ -286,58 +263,106 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R63SCng4mjKU",
+        "id": "uHPOV0LUrzt9"
+      },
+      "source": [
+        "# LSTM Structure\n",
+        "input_dim = len(train.select(\"features\").first()[0])\n",
+        "model = Sequential()\n",
+        "\n",
+        "model.add(LSTM(units = 128, return_sequences = True, input_shape = (input_dim, 1),\n",
+        "               activity_regularizer=regularizers.l2(0.25)))\n",
+        "model.add(Dropout(0.25))\n",
+        "model.add(LSTM(units = 128, return_sequences = True,\n",
+        "               activity_regularizer=regularizers.l2(0.25)))\n",
+        "model.add(Dropout(0.25))\n",
+        "model.add(LSTM(units = 128, return_sequences = True,\n",
+        "               activity_regularizer=regularizers.l2(0.25)))\n",
+        "model.add(Dropout(0.25))\n",
+        "model.add(LSTM(units = 128, activity_regularizer=regularizers.l2(0.25)))\n",
+        "model.add(Dropout(0.25))\n",
+        "model.add(Dense(units = 1))\n",
+        "\n",
+        "model.compile(optimizer='adam', loss = 'mean_squared_error')\n",
+        "cb = [EarlyStoppingByLossVal(monitor='val_loss', value=0.03, verbose=2)]\n",
+        "model.fit(x_train, y_train, epochs = 1000, validation_split=0.2, batch_size = 128, verbose=2, callbacks=cb)\n",
+        "\n",
+        "sgd = optimizers.SGD(learning_rate=0.001, momentum=0.9)\n",
+        "sgd_conf = optimizers.serialize(sgd)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "84d009fb-2ee8-4743-840d-faf5f909329d"
+        "id": "2ZLovinFK1Sz",
+        "outputId": "04961e54-a989-4a6f-b3fa-bc170b0d769a"
       },
       "source": [
-        "test.show()"
+        "# Initialize Elephas Spark ML Estimator\n",
+        "estimator = ElephasEstimator()\n",
+        "\n",
+        "estimator.set_keras_model_config(model.to_yaml())\n",
+        "estimator.set_optimizer_config(sgd_conf)\n",
+        "estimator.set_mode(\"synchronous\")\n",
+        "estimator.set_loss(\"mae\")\n",
+        "estimator.set_metrics(['mse'])\n",
+        "estimator.set_epochs(1000)\n",
+        "estimator.set_batch_size(128)\n",
+        "estimator.set_validation_split(0.2)\n",
+        "estimator.set_categorical_labels(False)"
       ],
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+--------------------+-------------------+\n",
-            "|            features|target_price_scaled|\n",
-            "+--------------------+-------------------+\n",
-            "|[-1.1303337538563...|  -1.00878975315894|\n",
-            "|[-1.1198932345828...| -1.019233606609437|\n",
-            "|[-1.1230978528307...| -1.023391057709735|\n",
-            "|[-1.1321912093307...|-1.0088719862513797|\n",
-            "|[-1.1306093112925...| -1.009292302652219|\n",
-            "|[-1.1245981065259...|-1.0128558202281577|\n",
-            "|[-1.0959912620022...|-0.9973499377321561|\n",
-            "|[-1.0918477182529...|-0.9896472430764616|\n",
-            "|[-1.0871530440740...| -0.999478916838796|\n",
-            "|[-1.0895105867063...|-0.9959519473039415|\n",
-            "|[-1.0305517342706...|-1.0000454254039726|\n",
-            "|[-1.0311640824001...|-0.9966920590642687|\n",
-            "|[-1.0476974663405...|-0.9767180671187524|\n",
-            "|[-1.0589748556868...|-0.9854532578634487|\n",
-            "|[-1.0609241610470...|-1.0065968149804025|\n",
-            "|[-1.0655678075115...|-0.9929092393134547|\n",
-            "|[-1.0550048061662...|-0.9941244895362474|\n",
-            "|[-1.0540046318503...|-0.9970484024648409|\n",
-            "|[-1.0489936013997...|-1.0008403592259263|\n",
-            "|[-1.0595667927306...|-1.0020921574898034|\n",
-            "+--------------------+-------------------+\n",
-            "only showing top 20 rows\n",
-            "\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ElephasEstimator_9e2722c71094"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uHPOV0LUrzt9"
+        "id": "pcPk3WzwK7-E"
       },
       "source": [
-        ""
+        "# Fitting a model returns a Transformer\n",
+        "pipeline = Pipeline(stages=[estimator])\n",
+        "fitted_pipeline = pipeline.fit(train)\n",
+        "\n",
+        "# Evaluate Spark model by evaluating the underlying model\n",
+        "prediction = fitted_pipeline.transform(test)\n",
+        "pnl = prediction.select(\"label\", \"prediction\")\n",
+        "\n",
+        "prediction_and_label = pnl.rdd.map(lambda row: (row.label, row.prediction))\n",
+        "metrics = RegressionMetrics(prediction_and_label)\n",
+        "print(metrics.r2)\n",
+        "print(metrics.meanAbsoluteError)\n",
+        "print(metrics.rootMeanSquaredError)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2WBeML5WaeGg"
+      },
+      "source": [
+        "# Evaluate Spark model\n",
+        "prediction = fitted_pipeline.transform(train)\n",
+        "pnl = prediction.select(\"index_category\", \"prediction\")\n",
+        "pnl.show(100)\n"
       ],
       "execution_count": null,
       "outputs": []
